<resources>
    <string name="app_name">WeLink</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="register_button_value">Create account</string>
    <string name="sign_in_button_value">Sign in</string>
    <string name="prompt_displayName">Username</string>
    <string name="sign_up_title">Sign up for WeLink</string>
    <string name="already_have_account">Already have an account? </string>
    <string name="donot_have_account">Don\'t have an account? </string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--  Profile activity  -->
    <string name="profile_img_button">\@string</string>
    <string name="username_textView">Username</string>
    <string name="profile_posts_entry">Posts</string>
    <string name="profile_followers_entry">Followers</string>
    <string name="profile_following_entry">Following</string>

    <string name="grinning_face">😀</string>
    <string name="grinning_face_with_smiling_eyes">😄</string>
    <string name="grinning_squinting_face">😆</string>
    <string name="rolling_on_the_floor_laughing">🤣</string>
    <string name="face_with_tears_of_joy">😂</string>
    <string name="slightly_smiling_face">🙂</string>
    <string name="upside_down_face">🙃</string>
    <string name="smiling_face_with_heart_eyes">😍</string>
    <string name="face_blowing_a_kiss">😘</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>